# xyzzy-gpt-bot

./: .dockerignore  .editorconfig  .gitignore  .nginx  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  recompose.sh  vercel.json
.sqlx/: query-0ebe34d2d4a298a7f9f4469525ebba635a61b4ad82b0118bece37d6a9fe2d7ea.json  query-24dca03c834f9b667856750258b92f2e47635600c0d8fd42c84ccc26acb02310.json  query-26538d52a64aa1cfdac60cc1d46db629c1a0f47749fc8959ad972e7e1c1714a8.json  query-4b5d9a62b16d7472f9855645a1e515913623a6fe93df40d2c7b976fedbb037cc.json  query-86789ed50c27435a1aca05620d2937241f3ae357a179b9f76bc901578bbd41da.json  query-c373349a914fb7393dafbd50dcfc00ac1ef667eb44a33005d4adc9ab53457184.json  query-d217a24cf15d27b50914f7944b550a1bbc565a125d7768f347d5cf15c3e593a0.json  query-d30b8d2a2d7ad79c57e06fae2e69e3612ec35b94679621d7124328e6f3e6576d.json  query-dbacd23ff551972faaa0461594669d72600db5a8c51a286fe5e51cc6e7b66c8e.json  query-e47a3f2c381e548955d106608ddae95d0c7fd033dd529a6008263745227747bd.json  query-e8264aa0c69a6f0c53c951e6f177cb4b5a13f6c039c2e9617239621889158032.json  query-f2b78ad49d9316deaea5936f03507e1419091e373702a273619186cf15b751af.json  query-f37b8ba7e835c1e1fa697e8d74df381778ced8e2d825d7bdfa987d3b056164fd.json
bot/: Cargo.toml  Dockerfile  README.md  config.toml
bot/.sqlx/: query-051b1d949664e4bf2ce43c497eafd40fa55122acaf9e322a229d0109dad3582d.json  query-20d611d775d084152ff5864153e64a752d92c8e717430847925127a2011edd7e.json  query-3427d07a19df0c01ef745949c8713919d05328e00d24f8ef655c63ee428729f8.json  query-51fa1ebf930fe92748a48e4a0371cd5be313480e5db4f09cae80c9f5501e9b88.json  query-58502d92096658bbcf4304d45fb98970543a5852321d6a787de3e85828f4384a.json  query-ae31f2a6870beca0a1c71bc3722eff820c63c7c9ab86b64af336f362812a1b04.json  query-b5f5b1413a55e218db09696c1d499b774eef85b03351f13fe67db4bf7de05dea.json  query-c68f9a0d1c94e8a4135c35b9dba9259dbd6a92751a2c04d8df3e206c6772da24.json  query-c6d8edc17c45615edb55653333fba00fbe89a8f5b6d7dd27bb6afc622b3ddc37.json
bot/migrations/: 003_users_init.sql
bot/src/: commands.rs  config.rs  database.rs  env.rs  main.rs  server.rs
bot/src/databases/: mod.rs
bot/src/databases/budgeting/: categories.rs  transactions.rs
bot/src/handlers/: auth.rs  dice.rs  mod.rs  reset.rs  util.rs
bot/src/handlers/auth/: bot.rs  jwt.rs  mod.rs
bot/src/handlers/budgeting/: mod.rs  settings.rs
bot/src/handlers/gpt/: chat.rs  history.rs  mod.rs  prompt.rs
bot/src/handlers/web/: auth.rs  mod.rs  user.rs
bot/src/handlers/web/budgeting/: mod.rs  overview.rs  transactions.rs
bot/src/keyboard/: core.rs  mod.rs
bot/src/keyboard/budgeting/: categories.rs  mod.rs  transactions.rs
bot/src/types/: auth.rs  common.rs  keyboard.rs  mod.rs  models.rs
bot/src/utils/: markdown.rs  strings.rs  transactions.rs
migrations/: 001_budgeting_init.sql  002_budgeting_seed_categories.sql
shared/: Cargo.toml
shared/bindings/: CategorySummary.ts  MonthlySpendingSummary.ts
shared/src/: lib.rs
src/: commands.rs  env.rs  main.rs  server.rs  types.rs
src/handlers/: auth.rs  chat.rs  dice.rs  help.rs  history.rs  maintainer.rs  mod.rs  prompt.rs
src/keyboard/: core.rs  gpt.rs  mod.rs  util.rs
src/menu/: budgeting.rs  gpt.rs  main.rs  mod.rs
src/types/: common.rs  databases.rs  keyboard.rs  main.rs  menu.rs  mod.rs  models.rs
src/utils/: mod.rs  statistics.rs  transactions.rs
web/: .prettierignore  .prettierrc.cjs  .stylelintrc.cjs  Dockerfile  README.md  angular.json  eslint.config.js  package.json  pnpm-lock.yaml  rspack.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vercel.json
web/environments/: environment.prod.ts  environment.ts
web/public/: index.html
(+184 files in other folders)
