[package]
name = "xyzzy-gpt-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-openai = "0.20.0"
dotenv = "0.15.0"
dptree = "0.3.0"
envy = "0.4.2"
openssl = { version = "0.10.64", features = ["vendored"] }
futures = "0.3.30"
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros", "bincode-serializer"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
